# Avito_new

./: manage.py  pyproject.toml  pytest.ini
Avito_new/: asgi.py  settings.py  urls.py  wsgi.py
ad/: admin.py  models.py  permissions.py  serializers.py  urls.py
ad/migrations/: 0001_initial.py  0002_initial.py
ad/views/: ad.py  cat.py  selection.py
tests/: conftest.py  factories.py
tests/ad/: ad_list_test.py  ad_retrieve_test.py
user/: admin.py  models.py  serializers.py  urls.py  validators.py
user/migrations/: 0001_initial.py
user/views/: location.py  user.py
